# bare

./: Cargo.toml
src/: main.rs
src/bare/: cli.rs  error.rs  exit.rs  log.rs  mod.rs
