[package]
name = "bare"
version = "2.1.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
license = "GPL-3.0"
description = "A CLI tool to batch rename files based on a series of <PATTERN> <REPLACEMENT> tuples."
documentation = "https://docs.rs/bare"
homepage = "https://github.com/jjpe/bare"
repository = "https://github.com/jjpe/bare.git"
edition = "2021"

[dependencies]
regex = "1.8.1"
term = "0.7.0"

[dependencies.clap]
version = "4.0.29"
features = ["cargo", "derive"]
