[package]
name = "bare"
version = "2.1.0"
authors = ["Joey Ezechiëls <joey.ezechiels@gmail.com>"]
license = "GPL-3.0"
description = "A CLI tool to batch rename files based on a series of <PATTERN> <REPLACEMENT> tuples."
documentation = "https://docs.rs/bare"
homepage = "https://github.com/jjpe/bare"
repository = "https://github.com/jjpe/bare.git"
edition = "2021"

[dependencies]
ioe = "0.5.1"
regex = "1.8.1"
term = "0.7.0"
thiserror = "1.0.40"

[dependencies.clap]
version = "4.0.29"
features = ["cargo", "derive"]
